--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,12 @@
 
 version: 2
 updates:
-  - package-ecosystem: "" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  - package-ecosystem: "npm"     # frontend JavaScript dependencies
+    directory: "/frontend"       # adjust if your frontend folder is named differently
     schedule:
       interval: "weekly"
+  - package-ecosystem: "pip"     # backend Python dependencies
+    directory: "/backend"        # adjust if your backend folder is named differently
+    schedule:
+      interval: "weekly"
+
