--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -24,6 +24,6 @@ PyMySQL==1.1.1
 python-dotenv==1.1.0
 requests==2.32.2
 SQLAlchemy==2.0.29
-typing_extensions==4.10.0
+typing_extensions>=4.12.0
 urllib3==2.2.2
 Werkzeug==3.1.3
