--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Node.js CI
+name: Node.js CI (Yarn)
 
 permissions:
   contents: read
@@ -28,13 +28,17 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-        cache-dependency-path: frontend/package-lock.json
+        cache: 'yarn'
+        cache-dependency-path: frontend/yarn.lock
 
-    - name: Install dependencies
-      run: npm ci
+    - name: Install Yarn
+      run: corepack enable
+
+    - name: Install dependencies using Yarn
+      run: yarn install --frozen-lockfile
       working-directory: frontend
 
     - name: Build project
-      run: npm run build --if-present
+      run: yarn build
       working-directory: frontend
+
