--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,6 +35,6 @@ jobs:
       run: corepack enable
 
     - name: Install dependencies using Yarn
-      run: yarn install --frozen-lockfile
+      run: yarn install
       working-directory: frontend
 
